Fix clipped Learn More button border in blog product cards
Override overflow: hidden on product-card within related-products-grid

--- a/css/blog.css
+++ b/css/blog.css
@@ -316,6 +316,7 @@
     min-width: 200px;
     display: flex;
     flex-direction: column;
+    overflow: visible;
 }
 
 .related-products-grid .product-image {
